src/test/ui/compile-fail-migration/meta-expected-error-wrong-rev.a.stderr
error[E0308]: mismatched types
  --> $DIR/meta-expected-error-wrong-rev.rs:21:18
   |
LL |     let x: u32 = 22_usize; //[b]~ ERROR mismatched types
   |                  ^^^^^^^^ expected u32, found usize

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
